# .github

./: ._README.md  .aiexclude  .bandit  .devcontainer  .gitattributes  .gitbook.yaml  .gitconfig  .gitignore  .gitleaks.toml  .imgbotconfig  .lycheeignore  .pre-commit-config-rapid.yaml  .pre-commit-config.yaml  .releaserc.json  .restructure_plan.txt  .secrets.baseline  AGENTS.md  AGENTSPHERE_GITHUB_PAGES_IMPLEMENTATION.md  AI_CODE_INTELLIGENCE.md  AI_RAPID_WORKFLOW.md  ARCHIVAL_STRATEGY.md  AUTHENTICATION_REQUIRED.md  AUTOMATION_MASTER_GUIDE.md  BRANCH_DELETION_AUDIT_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  CLEANUP_ROADMAP.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPREHENSIVE_WORKFLOW_OPTIMIZATION_ANALYSIS.md  CONTEXT_HANDOFF_IMPLEMENTATION.md  CONTRIBUTING.md  CONTRIBUTORS.md  DASHBOARD.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_SCHEMA_ORG_SEMVER.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_PHASE1.sh  DEPLOY_PHASE3.sh  (+89 more)
.Jules/: palette.md
.ai/: CLAUDE.md  GEMINI.md  README.md
.config/: .bandit  .gitleaks.toml  .secrets.baseline  accesslint.yml  coderabbit.yaml  gitattributes  pre-commit.yaml  renovate.json  seed.yaml  template-config.yml
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
.github/: .gitmessage  CLAUDE_SECURITY.md  CODEOWNERS  COMMIT_TEST_1766488865.txt  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECRETS.md  VERSION_MANAGEMENT.md  WALKTHROUGH_GUIDE.md  WORKFLOW_GUIDE.md  WORKFLOW_OPTIMIZATION_QUICKSTART.md  WORKFLOW_OPTIMIZATION_REPORT.md  WORKFLOW_STANDARDS.md  agentsphere-config.yml  analytics.yml  app-deployment-config.yml  auto-labeler.yml  auto-merge.yml  badge-config.yml  boring-cyborg.yml  completions-config.yml  copilot-instructions-rapid-dev.md  copilot-instructions.md  demo-config.yml  dependabot.yml  emergency-pull-request.yml  incident.yml  issue-labeler.yml  keyword-labeler.yml  labeler.yml  labels.yml  lighthouse-config.json  logical-branch-policy.md  maintenance.yml  markdown-link-check-config.json  mergify.yml  notifications.yml  orchestration_tasks.json  routing.yml  scheduled-walkthrough-config.yml  (+9 more)
.jules/: bolt.md  palette.md  sentinel.md
.schema-org/: README.md  documentation.jsonld  organization.jsonld  repository.jsonld
.semgrep/: rules.yml
.specstory/: .project.json
.venv-1/: pyvenv.cfg
DISCUSSION_TEMPLATE/: announcements.yml  general.yml  ideas.yml  q-and-a.yml  show-and-tell.yml
ISSUE_TEMPLATE/: accessibility_issue.yml  best-practices-review.yml  bug_report.yml  bug_report_form.yml  community-health-check.yml  config.yml  documentation.md  documentation.yml  feature_request.yml  feature_request_form.yml  infrastructure.yml  performance_issue.yml  question.md  security_vulnerability.yml  task.yml  tech_debt.yml  walkthrough-request.yml
PULL_REQUEST_TEMPLATE/: bug_fix.md  documentation.md  feature.md  performance.md  refactoring.md
_layouts/: default.html
agents/: House-Keeping--Pull-Request--Branch--Deep-Cleaner.agent.md  completionism-specialist.agent.md  data-decommissioning.agent.md  data-forensics.agent.md  data-reclamation.agent.md  data-sanitization.agent.md  github-org-manager.agent.md  greener-grass-workflow-benchmark.agent.md  nervous-archaeologist.agent.md  repository-setup.agent.md  security-audit.agent.md  workflow-optimizer.agent.md
ai_framework/: INDEX.md  README.md
archive/: CLEANUP_ROADMAP.md  README.md
chatmodes/: mouthpiece.chatmode.md
context-handoff/: QUICKSTART.md  README.md  context_generator.py
docs/: ._AGENT_REGISTRY.md  AGENTSPHERE_SETUP.md  AGENT_ARCHITECTURE_GUIDE.md  AGENT_REGISTRY.md  AGENT_TRACKING.md  AI_IMPLEMENTATION_GUIDE.md  ARTIFACT_OPTIMIZATION.md  AUTONOMOUS_ECOSYSTEM_GUIDE.md  BATCH_ONBOARDING_GUIDE.md  BRANCH_PROTECTION.md  CHANGELOG.md  CLAUDE.md  CODESPACES_GUIDE.md  CODE_OF_CONDUCT.md  CODE_SERVER_SETUP.md  COMBINED_REPOSITORY_ANALYSIS.md  COMMUNITY_MANAGEMENT.md  COMPLETE_DEPLOYMENT_README.md  COMPLETION_ANNOUNCEMENT.md  COMPREHENSIVE_WORKFLOW_OPTIMIZATION_ANALYSIS.md  CONTRIBUTING.md  CONTRIBUTORS.md  CONTRIBUTOR_ANNOUNCEMENT.md  COPILOT_ENHANCEMENTS_INDEX.md  COPILOT_QUICK_START.md  CUSTOM_INSTRUCTIONS_SETUP.md  DEPLOYMENT_ANNOUNCEMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_ENVIRONMENT_SETUP.md  DISCUSSION_GUIDE.md  DRAFT_TO_READY_AUTOMATION_FIX.md  ECOSYSTEM_README.md  EXECUTIVE_SUMMARY.md  FINAL_PROJECT_SUMMARY.md  FINAL_VALIDATION_CHECKLIST.md  GITHUB_COPILOT_ACTIONS_SETUP.md  GITHUB_PAGES_SETUP.md  GITHUB_PROJECTS_DEPLOYMENT.md  GITHUB_PROJECTS_IMPLEMENTATION.md  (+117 more)
instructions/: version-control-standards.instructions.md
metrics/: README.md  baseline-metrics.json  metrics-summary.md  progress-log.md  week-2-summary.md  week-3-summary.md  week-4-summary.md  workflow-metrics.json
observability/: opentelemetry-example.js  prometheus-example.yml
profile/: README.md
prompts/: generate-documentation.prompt.md  generate-workflow-template.prompt.md  issue-triage.prompt.md  mouthpiece-transform.prompt.md  org-health-check.prompt.md  suggest-awesome-github-copilot-agents.prompt.md  suggest-awesome-github-copilot-chatmodes.prompt.md  suggest-awesome-github-copilot-collections.prompt.md  suggest-awesome-github-copilot-instructions.prompt.md  suggest-awesome-github-copilot-prompts.prompt.md
reports/: BRANCH_PR_CLEANUP_REPORT.md  DASHBOARD.md  DASHBOARD_TEST.md  ORG_HEALTH_REPORT.md  PR_CLOSURE_FINAL_REPORT.md  WORKFLOW_CLEANUP_REPORT.md  commit-report-2025-11-17.md  commit-report-2025-12-01.md  commit-report-2025-12-22.md  commit-report-2025-12-29.md  commit-report-2026-01-05.md  commit-report-2026-01-12.md  org_health_20251230_023727.json  org_health_20251230_023727.md  org_health_20260115_190134.md  pr-chat-feedback.md
scripts/: 1PASSWORD_QUICK_START.md  README.md  README_PROJECTS.md  README_sync_labels.md  READY_TO_DEPLOY.md  add-items-to-projects.py  aicommit.sh  auto-docs.py  bootstrap-walkthrough-org.sh  commit_changes.sh  complete-project-setup.sh  configure-automation-rules-guide.sh  configure-github-projects.py  configure-project-views-guide.sh  create-rapid-workflow-labels.sh  deploy-now.sh  deploy.sh  (+27 more)
(+1392 files in other folders)
