[project]
name = "ivviiviivvi-github"
version = "1.0.0"
description = "Organization-wide GitHub configuration and community health files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
version_scheme = "semver"
version_files = [
    "pyproject.toml:version",
    "VERSION",
    "package.json:version",
]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true
annotated_tag = true
bump_message = "chore(release): bump version $current_version -> $new_version"

# Conventional commit types with descriptions
[tool.commitizen.customize]
message_template = "{{change_type}}{% if scope %}({{scope}}){% endif %}: {{message}}{% if body %}\n\n{{body}}{% endif %}{% if footer %}\n\n{{footer}}{% endif %}"
example = "feat(workflows): add auto-labeling for new PRs"
schema = "<type>(<scope>): <subject>\n\n<body>\n\n<footer>"
schema_pattern = "^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert)(\\(.+\\))?!?: .+"

[tool.commitizen.customize.questions]
change_type = { type = "list", name = "change_type", message = "Select the type of change:", choices = [
    { value = "feat", name = "feat: A new feature" },
    { value = "fix", name = "fix: A bug fix" },
    { value = "docs", name = "docs: Documentation changes" },
    { value = "style", name = "style: Code style changes" },
    { value = "refactor", name = "refactor: Code refactoring" },
    { value = "perf", name = "perf: Performance improvements" },
    { value = "test", name = "test: Test additions/changes" },
    { value = "build", name = "build: Build system changes" },
    { value = "ci", name = "ci: CI configuration changes" },
    { value = "chore", name = "chore: Other changes" },
    { value = "revert", name = "revert: Revert a commit" },
]}
scope = { type = "input", name = "scope", message = "Scope (optional, e.g., workflows, docs):" }
message = { type = "input", name = "message", message = "Short description:" }
body = { type = "input", name = "body", message = "Longer description (optional):" }
footer = { type = "input", name = "footer", message = "Footer (e.g., BREAKING CHANGE, Closes #123):" }

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D107", "D205", "D401",
    # SIM rules are stylistic simplifications - not enforced
    "SIM102", "SIM103", "SIM105", "SIM108", "SIM115", "SIM117",
]

[tool.ruff.lint.per-file-ignores]
# JavaScript embedded in Python strings causes false positives
"automation/scripts/generate_pilot_workflows.py" = ["F821"]
# ML code uses X, X_train, X_test by convention
"automation/scripts/enhanced_analytics.py" = ["N806"]
"automation/scripts/predict_workflow_failures.py" = ["N806"]
"tests/unit/test_predict_workflow_failures.py" = ["N806"]
# Test files with sys.path manipulation need late imports
"tests/unit/test_*.py" = ["E402"]
# LRU cache on crawler methods is intentional (short-lived instances)
"automation/scripts/web_crawler.py" = ["B019"]
# HTML templates have long lines that can't be wrapped
"automation/scripts/generate_email_digest.py" = ["E501"]
"automation/scripts/self_healing.py" = ["E501"]
"tests/unit/test_models.py" = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Disable strict checks that cause too many false positives
check_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests", ".venv", "node_modules"]
skips = ["B101"]  # Allow assert statements in tests
