[project]
name = "org-github-template"
version = "1.0.0"
description = "Organization-wide GitHub configuration and community health files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
    "PyGithub>=2.1.1",
    "jsonschema>=4.19.0",
]

[project.optional-dependencies]
dev = [
    "types-PyYAML>=6.0.12",
    "types-requests>=2.32.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
version_scheme = "semver"
version_files = [
    "pyproject.toml:version",
    "package.json:version",
]
update_changelog_on_bump = true
changelog_file = "docs/CHANGELOG.md"
changelog_incremental = true
annotated_tag = true
bump_message = "chore(release): bump version $current_version -> $new_version"

# Conventional commit types with descriptions
[tool.commitizen.customize]
message_template = "{{change_type}}{% if scope %}({{scope}}){% endif %}: {{message}}{% if body %}\n\n{{body}}{% endif %}{% if footer %}\n\n{{footer}}{% endif %}"
example = "feat(workflows): add auto-labeling for new PRs"
schema = "<type>(<scope>): <subject>\n\n<body>\n\n<footer>"
schema_pattern = "^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert)(\\(.+\\))?!?: .+"

[tool.commitizen.customize.questions]
change_type = { type = "list", name = "change_type", message = "Select the type of change:", choices = [
    { value = "feat", name = "feat: A new feature" },
    { value = "fix", name = "fix: A bug fix" },
    { value = "docs", name = "docs: Documentation changes" },
    { value = "style", name = "style: Code style changes" },
    { value = "refactor", name = "refactor: Code refactoring" },
    { value = "perf", name = "perf: Performance improvements" },
    { value = "test", name = "test: Test additions/changes" },
    { value = "build", name = "build: Build system changes" },
    { value = "ci", name = "ci: CI configuration changes" },
    { value = "chore", name = "chore: Other changes" },
    { value = "revert", name = "revert: Revert a commit" },
]}
scope = { type = "input", name = "scope", message = "Scope (optional, e.g., workflows, docs):" }
message = { type = "input", name = "message", message = "Short description:" }
body = { type = "input", name = "body", message = "Longer description (optional):" }
footer = { type = "input", name = "footer", message = "Footer (e.g., BREAKING CHANGE, Closes #123):" }

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D107", "D205", "D401",
    # SIM rules are stylistic simplifications - not enforced
    "SIM102", "SIM103", "SIM105", "SIM108", "SIM115", "SIM117",
]

[tool.ruff.lint.per-file-ignores]
# JavaScript embedded in Python strings causes false positives
"src/automation/scripts/generate_pilot_workflows.py" = ["F821"]
# ML code uses X, X_train, X_test by convention
"src/automation/scripts/enhanced_analytics.py" = ["N806"]
"src/automation/scripts/predict_workflow_failures.py" = ["N806"]
"tests/unit/test_predict_workflow_failures.py" = ["N806"]
# Test files with sys.path manipulation need late imports
"tests/unit/test_*.py" = ["E402"]
# LRU cache on crawler methods is intentional (short-lived instances)
"src/automation/scripts/web_crawler.py" = ["B019"]
# HTML templates have long lines that can't be wrapped
"src/automation/scripts/generate_email_digest.py" = ["E501"]
"src/automation/scripts/self_healing.py" = ["E501"]
"tests/unit/test_models.py" = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Enable stricter type checking
check_untyped_defs = true
disallow_untyped_defs = false  # Enable incrementally as type hints are added
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "node_modules"]
skips = ["B101"]  # Allow assert statements in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    --cov=src/automation
    --cov-report=html:htmlcov
    --cov-report=term-missing:skip-covered
    --cov-report=xml:coverage.xml
    --cov-fail-under=58
    --junitxml=test-results/pytest-report.xml
    --verbose
    --tb=short
    --strict-markers
    --strict-config
    -ra
    --durations=10
    --timeout=300
"""
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for workflows",
    "slow: Slow running tests (>5s)",
    "month1: Month 1 core workflow tests",
    "month2: Month 2 feature tests (Slack, ML, A/B testing)",
    "month3: Month 3 advanced automation tests",
    "critical: Critical functionality tests",
    "requires_github_token: Tests requiring GitHub API access",
    "requires_slack: Tests requiring Slack integration",
    "requires_ml: Tests requiring ML model artifacts",
    "security: Security-focused tests",
    "performance: Performance benchmarks",
]

[tool.coverage.run]
source = ["src/automation/scripts"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.*",
    "*/node_modules/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
